# COMrade

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.dev/docs/: TODO.md  serial-improvements.md
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml
app/crates/comrade-app/: Cargo.toml  Info.plist  tauri.conf.json
app/crates/comrade-app/capabilities/: default.json
app/crates/comrade-app/icons/: icon.icns
app/crates/comrade-app/src/: auto_log.rs  ble_session.rs  commands.rs  connection_status.rs  hid_session.rs  lib.rs  log_buffer.rs  main.rs  mcp.rs  native_ble_nus.rs
app/crates/comrade-app/ui/: index.html  package-lock.json  package.json  vite.config.ts
app/crates/comrade-app/ui/public/: about.html
app/crates/comrade-app/ui/src/: chart.ts  descriptor-panel.ts  main.ts  style.css  terminal.ts
app/crates/comrade-cli/: Cargo.toml
app/crates/comrade-cli/src/: main.rs  mcp.rs  remote.rs
app/crates/comrade-cli/src/tui/: event.rs  ui.rs
app/crates/comrade-core/: Cargo.toml
app/crates/comrade-core/src/: client.rs  daemon.rs  engine.rs  error.rs  lib.rs  port.rs
app/crates/comrade-protocol/src/: command.rs  daemon.rs  event.rs  lib.rs  tests.rs  timestamp.rs
crates/comrade-app/: Cargo.toml  tauri.conf.json
crates/comrade-app/icons/: icon.icns
crates/comrade-app/src/: commands.rs  hid_descriptor.rs  hid_session.rs  lib.rs  line_assembler.rs  log_buffer.rs  mcp.rs
crates/comrade-app/ui/: index.html  vite.config.ts
crates/comrade-app/ui/src/: main.ts  style.css  terminal.ts
crates/comrade-cli/: Cargo.toml
crates/comrade-cli/src/: main.rs  tui.rs
crates/comrade-cli/src/tui/: app.rs  input.rs  line_assembler.rs
crates/comrade-core/src/: port.rs
crates/comrade-protocol/: Cargo.toml
crates/comrade-protocol/src/: command.rs  config.rs  event.rs
docs/: architecture-gui.md  architecture.md  comrade_design_language.md  research-landscape.md
firmware/: CMakeLists.txt  Makefile  README.md  pico_sdk_import.cmake
firmware/src/: ble_nus.c  ble_nus.h  btstack_config.h  main.c  nus.gatt
firmware/uart-bridge/: README.md
firmware/uart-bridge/src/: main.c  uart_rx.pio  uart_tx.pio
homebrew/: comrade-app.rb  comrade.rb
scripts/: sync-version.sh
