[workspace]
resolver = "2"
members = [
    "crates/comrade-protocol",
    "crates/comrade-core",
    "crates/comrade-cli",
    "crates/comrade-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/RobertDaleSmith/COMrade"

[workspace.dependencies]
# Shared types
comrade-protocol = { path = "crates/comrade-protocol" }
comrade-core = { path = "crates/comrade-core" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"

# Serial port enumeration
serialport = "4"

# HID
hidapi = { version = "2.6", features = ["macos-shared-device"] }
nusb = "0.2"
hidreport = "0.6"
hut = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# GUI (Tauri)
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

# Pattern matching
regex = "1"

# Byte buffers
bytes = "1"

# ANSI parsing
vte = "0.13"

# Lock-free swapping
arc-swap = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform dirs
dirs = "6"

# Time
chrono = { version = "0.4", features = ["serde"] }

# BLE
btleplug = "0.12"
uuid = "1"

# MCP server
rmcp = { version = "1.1", features = ["server", "macros", "transport-streamable-http-server", "transport-io"] }
axum = "0.8"
schemars = "1"
tokio-util = { version = "0.7", features = ["rt"] }
