[package]
name = "comrade-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "comrade-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
comrade-protocol = { workspace = true }
comrade-core = { workspace = true }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hidapi = { workspace = true }
nusb = { workspace = true }
hidreport = "0.6"
hut = "0.5"
rmcp = { workspace = true }
axum = { workspace = true }
schemars = { workspace = true }
tokio-util = { workspace = true }
regex = { workspace = true }
btleplug = { workspace = true }
uuid = { workspace = true }
futures = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
