[package]
name = "comrade-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "comrade-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
comrade-protocol = { workspace = true }
comrade-core = { workspace = true }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hidapi = { workspace = true }
nusb = { workspace = true }
hidreport = "0.6"
hut = "0.5"
rmcp = { workspace = true }
axum = { workspace = true }
schemars = { workspace = true }
tokio-util = { workspace = true }
regex = { workspace = true }
btleplug = { workspace = true }
uuid = { workspace = true }
futures = "0.3"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray", "NSUUID", "NSData"] }
objc2-core-bluetooth = { version = "0.2.2", features = ["CBManager", "CBCentralManager", "CBPeripheral", "CBPeer", "CBUUID", "CBService", "CBCharacteristic", "CBAttribute"] }
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
